# C-language-lab1-image-rotation

solution/: CMakeLists.txt
solution/include/bmp/: bmp.h
solution/include/bmp_read/: bmp_reader.h
solution/include/file_work/: file_work.h
solution/include/image/: image.h
solution/include/transform/: rotate.h
solution/src/: main.c
solution/src/bmp/: bmp.c
solution/src/bmp_read/: bmp_reader.c
solution/src/file_work/: file_work.c
solution/src/image/: image.c
solution/src/transform/: rotate.c
